err.log
In file included from ./src/event.c:1:0:
./include/base.h:51:0: warning: "ERROR" redefined
 #define ERROR  1
 
In file included from c:\program files\git\mingw32\include\windows.h:46:0,
                 from ./include/base.h:16,
                 from ./src/event.c:1:
c:\program files\git\mingw32\include\wingdi.h:348:0: note: this is the location of the previous definition
 #define ERROR       0
 
In file included from ./src/event.c:1:0:
./include/base.h:176:0: warning: "max" redefined
 #define max(a,b)    (((a) > (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:16,
                 from ./src/event.c:1:
c:\program files\git\mingw32\include\windef.h:162:0: note: this is the location of the previous definition
 #define max(a,b) ((a)>(b)?(a):(b))
 
In file included from ./src/event.c:1:0:
./include/base.h:177:0: warning: "min" redefined
 #define min(a,b)    (((a) < (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:16,
                 from ./src/event.c:1:
c:\program files\git\mingw32\include\windef.h:165:0: note: this is the location of the previous definition
 #define min(a,b) ((a)<(b)?(a):(b))
 
./src/event.c: In function 'process_ser':
./src/event.c:42:27: warning: pointer targets in passing argument 1 of 'read_msg_order' differ in signedness [-Wpointer-sign]
     switch(read_msg_order(msg))
                           ^~~
In file included from ./include/base.h:35:0,
                 from ./src/event.c:1:
./include/global.h:49:16: note: expected 'unsigned char *' but argument is of type 'char *'
 unsigned short read_msg_order(unsigned char * buf);
                ^~~~~~~~~~~~~~
./src/event.c:41:9: warning: unused variable 'index' [-Wunused-variable]
     int index = 0;
         ^~~~~
./src/event.c:40:9: warning: unused variable 'ret' [-Wunused-variable]
     int ret;
         ^~~
./src/event.c:62:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
./src/event.c: In function 'process_cli':
./src/event.c:71:27: warning: pointer targets in passing argument 1 of 'read_msg_order' differ in signedness [-Wpointer-sign]
     switch(read_msg_order(msg))
                           ^~~
In file included from ./include/base.h:35:0,
                 from ./src/event.c:1:
./include/global.h:49:16: note: expected 'unsigned char *' but argument is of type 'char *'
 unsigned short read_msg_order(unsigned char * buf);
                ^~~~~~~~~~~~~~
./src/event.c:76:22: error: invalid type argument of '->' (have 'rfb_format {aka struct rfb_format}')
    if(cli_display.fmt->play_flag == 1)
                      ^~
./src/event.c:79:14: warning: implicit declaration of function 'create_encode' [-Wimplicit-function-declaration]
              create_encode(&cli_display.fmt);
              ^~~~~~~~~~~~~
./src/event.c:82:22: error: invalid type argument of '->' (have 'rfb_format {aka struct rfb_format}')
    if(cli_display.fmt->play_flag == 2)
                      ^~
./src/event.c:85:18: error: 'fmt' undeclared (first use in this function)
     vids_width = fmt->width;
                  ^~~
./src/event.c:85:18: note: each undeclared identifier is reported only once for each function it appears in
./src/event.c:68:11: warning: unused variable 'tmp' [-Wunused-variable]
     char *tmp = &msg[HEAD_LEN];
           ^~~
./src/event.c: In function 'event_loop':
./src/event.c:136:11: warning: unused variable 'tmp' [-Wunused-variable]
     char *tmp = &buf[HEAD_LEN];
           ^~~
make: *** [event.o] Error 1
